...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/homepageTitle"
        android:layout_width="273dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="You Need To Login"
        android:textSize="28sp"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addTaskMainButton"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginTop="96dp"
        android:text="ADD TASK"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/allTasksMainButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/allTasksMainButton"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginTop="96dp"
        android:text="ALL TASKS"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/addTaskMainButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/userSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
