<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSetting">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="216dp"
        android:layout_height="86dp"
        android:gravity="center"
        android:text="User Settings"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/usernameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Enter Username"
        app:layout_constraintBottom_toTopOf="@+id/userSettingsRadioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsTitle" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="36dp"
        android:text="Username:"
        app:layout_constraintBottom_toBottomOf="@+id/usernameEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/usernameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userSettingsRadioGroup" />

    <RadioGroup
        android:id="@+id/userSettingsRadioGroup"
        android:layout_width="223dp"
        android:layout_height="175dp"
        app:layout_constraintBottom_toTopOf="@+id/usernameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText">

        <TextView
            android:id="@+id/userSettingsTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Select Team" />

        <RadioButton
            android:id="@+id/userSettingsSeahawksRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Seattle Seahawks"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/userSettingsBillsRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Buffalo Bills"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/userSettingsCardinalsRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Arizona Cardinals"
            android:textStyle="bold" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>